// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetupBanner should render correctly when the user does have the edit scope granted 1`] = `
<div>
  <section
    id="enhanced-measurement-notification"
  >
    <div
      class="googlesitekit-widget-context"
    >
      <div
        class="mdc-layout-grid"
      >
        <div
          class="mdc-layout-grid__inner"
        >
          <div
            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
          >
            <div
              class="googlesitekit-banner googlesitekit-banner--setup-cta"
            >
              <div
                class="googlesitekit-banner__content"
              >
                <p
                  class="googlesitekit-typography googlesitekit-banner__title googlesitekit-typography--body googlesitekit-typography--medium"
                >
                  Understand how visitors interact with your content
                </p>
                <div
                  class="googlesitekit-banner__description"
                >
                  <span>
                    Enable enhanced measurement in Analytics to automatically track metrics like file downloads, video plays, form interactions, etc. No extra code required.
                  </span>
                   
                  <a
                    aria-label="Learn more (opens in a new tab)"
                    class="googlesitekit-cta-link"
                    href="https://support.google.com/analytics/answer/9216061?hl=en-US"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <span
                      class="googlesitekit-cta-link__contents"
                    >
                      Learn more
                    </span>
                    <span
                      class="googlesitekit-icon-wrapper"
                      style="margin-left: 5px;"
                    >
                      <svg />
                    </span>
                  </a>
                </div>
                <p
                  class="googlesitekit-typography googlesitekit-banner__help-text googlesitekit-typography--body googlesitekit-typography--medium"
                >
                  You can always add/edit this in the Site Kit Settings
                </p>
                <div
                  class="googlesitekit-notice__action"
                >
                  <button
                    class="mdc-button googlesitekit-banner__cta googlesitekit-button-icon--spinner googlesitekit-button-icon--spinner__after mdc-button--raised"
                    target="_self"
                  >
                    <span
                      class="mdc-button__label"
                    >
                      Enable now
                    </span>
                  </button>
                  <button
                    class="mdc-button mdc-button--tertiary"
                    target="_self"
                  >
                    <span
                      class="mdc-button__label"
                    >
                      Maybe later
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="googlesitekit-banner__svg-wrapper googlesitekit-banner__svg-wrapper--center"
                style="background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PC9zdmc+);"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`SetupBanner should render correctly when the user does not have the edit scope granted 1`] = `
<div>
  <section
    id="enhanced-measurement-notification"
  >
    <div
      class="googlesitekit-widget-context"
    >
      <div
        class="mdc-layout-grid"
      >
        <div
          class="mdc-layout-grid__inner"
        >
          <div
            class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
          >
            <div
              class="googlesitekit-banner googlesitekit-banner--setup-cta"
            >
              <div
                class="googlesitekit-banner__content"
              >
                <p
                  class="googlesitekit-typography googlesitekit-banner__title googlesitekit-typography--body googlesitekit-typography--medium"
                >
                  Understand how visitors interact with your content
                </p>
                <div
                  class="googlesitekit-banner__description"
                >
                  <span>
                    Enable enhanced measurement in Analytics to automatically track metrics like file downloads, video plays, form interactions, etc. No extra code required — you’ll be redirected to give permission for Site Kit to enable it on your behalf.
                  </span>
                   
                  <a
                    aria-label="Learn more (opens in a new tab)"
                    class="googlesitekit-cta-link"
                    href="https://support.google.com/analytics/answer/9216061?hl=en-US"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <span
                      class="googlesitekit-cta-link__contents"
                    >
                      Learn more
                    </span>
                    <span
                      class="googlesitekit-icon-wrapper"
                      style="margin-left: 5px;"
                    >
                      <svg />
                    </span>
                  </a>
                </div>
                <p
                  class="googlesitekit-typography googlesitekit-banner__help-text googlesitekit-typography--body googlesitekit-typography--medium"
                >
                  You can always add/edit this in the Site Kit Settings
                </p>
                <div
                  class="googlesitekit-notice__action"
                >
                  <button
                    class="mdc-button googlesitekit-banner__cta googlesitekit-button-icon--spinner googlesitekit-button-icon--spinner__after mdc-button--raised"
                    target="_self"
                  >
                    <span
                      class="mdc-button__label"
                    >
                      Enable now
                    </span>
                  </button>
                  <button
                    class="mdc-button mdc-button--tertiary"
                    target="_self"
                  >
                    <span
                      class="mdc-button__label"
                    >
                      Maybe later
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="googlesitekit-banner__svg-wrapper googlesitekit-banner__svg-wrapper--center"
                style="background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PC9zdmc+);"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
